# PS2IIDXtoPC-with-arduino-uno

./: .env.example  .gitignore  Agent.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  index.ts  main.bat  package-lock.json  package.json
arduino/: sketch_dec16a.ino
arduino/sketch_dec16a/: sketch_dec16a.ino
mapping/: iidx.keyboard.json  popn.keyboard.json  x360.pad.json
src/: cli.rs  env.rs  launcher.rs  main.rs  mapping.rs  serial.rs  types.rs
src/outputs/: keyboard.rs  mod.rs  x360.rs
ts-legacy/: IMPROVEMENT_PLAN.md  PROJECT_REPORT.md  index.ts  main.bat  package-lock.json  package.json  pad.ts  popen.ts  vigemclient.d.ts
ts-legacy/src/: cli.ts  env.ts  launcher.ts  mapping.ts  serial.ts  types.ts
ts-legacy/src/outputs/: keyboard.ts  x360.ts
